Fixing the susper logo alignment and its container Fixing alignment for all screen sizes Fixing width of div Update index.component.html Update index.component.css Update index.component.html Update index.component.css Update index.component.css Update index.component.css Update index.component.css

--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -40,7 +40,7 @@
   }
 
   div#susper-logo-fix {
-    margin-left: -40%;
+    margin-left: 33.5%;
   }
 }
 
@@ -119,9 +119,13 @@
   z-index: -1;
 }
 
+#susper-logo-fix {
+  width: 150px;
+  margin-left: 35%;
+}
+
 #biglogo {
   display: block;
-  margin-left: 35%;
 }
 
 .navbar-brand {
@@ -144,8 +148,8 @@ footer {
 }
 
 @media screen and (max-width: 823px) {
-  img#biglogo{
-    margin-left: 61%;
+  #susper-logo-fix {
+    margin-left: 78%;
   }
 }
 
@@ -154,7 +158,7 @@ footer {
     margin-left: -48%;
   }
 
-  img#biglogo{
+  #susper-logo-fix {
     margin-left: 37%;
   }
 
@@ -170,7 +174,8 @@ footer {
 }
 
 @media screen and (max-width: 479px) {
-  img#biglogo{
+  #susper-logo-fix {
     margin-left: 52%;
   }
 }
+
